Empty “” selected text after deleting a file
Affected Version
- Version: NautilusDevel
- Distribution: Flatpak
- Also happens with development version: Yes
Steps to reproduce
- Select a file
- Press Delete
Expected Behavior
No floating bar that says “” selected
in the bottom right corner.
Actual Behavior
The floating bar in the bottom right corner is shown and says “” selected
.