files-view: Move focus function from list base

This was supposed to be done in ee6ee07543f8341359e82df4e137b31ef64f2614

The select action called by this focus function would set the
selection and notify the changes which updates the selection info
in the floating bar.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3354